--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -72,8 +72,20 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.851" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_i"
+            app:layout_constraintVertical_bias="0.403" />
+
+        <Button
+            android:id="@+id/btn_i"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="BLIND모드 OFF"
+            android:textSize="34sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_pnum"
+            app:layout_constraintVertical_bias="0.155" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
