--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -2,15 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/bg_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main"
+        android:id="@+id/bg_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#BDE7ED"
         tools:context=".MainActivity"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
@@ -20,6 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="50dp"
+            android:backgroundTint="#8FCC91"
             android:text="-"
             android:textSize="48sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -32,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
+            android:backgroundTint="#8FCC91"
             android:text="+"
             android:textSize="48sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -66,6 +69,7 @@
             android:id="@+id/btn_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="#5AB1D9"
             android:text="시작"
             android:textSize="48sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -79,6 +83,7 @@
             android:id="@+id/btn_i"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="#63764F"
             android:text="BLIND모드 OFF"
             android:textSize="34sp"
             app:layout_constraintBottom_toBottomOf="parent"
